[package]
name = "mssql-tls"
description = "TLS negotiation for SQL Server connections (TDS 7.x and 8.0)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["sql-server", "tls", "rustls", "encryption"]
categories = ["network-programming", "cryptography"]

[features]
default = []
# Verify server certificates against the OS/platform trust store, so servers
# chaining to an enterprise internal CA installed in the OS store are accepted.
# Delegates to the platform verifier (revocation + OS policy). Off by default:
# enabling it changes the trust-anchor set. Active only when no explicit
# `root_certificates` are configured (explicit roots still take precedence).
native-certs = ["dep:rustls-platform-verifier"]

[dependencies]
rustls = { workspace = true }
webpki-roots = { workspace = true }
rustls-platform-verifier = { workspace = true, optional = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[package.metadata.cargo-machete]
# tokio-test is used in dev-dependencies for test utilities
ignored = ["tokio-test"]

[lints]
workspace = true
